--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:allowBackup="true"
     android:label="@string/app_name"
     android:supportsRtl="true"
+    android:theme="@style/Theme.NoteApp"
   >
     <activity
       android:name=".MainActivity"
