--- a/gradle.properties.example
+++ b/gradle.properties.example
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx2g
 android.useAndroidX=true
 kotlin.code.style=official
+
+# SECRET
+KEYSTORE_PASSWORD=xxx
+KEY_PASSWORD=xxx
