--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     android:label="@string/app_name"
     android:supportsRtl="true"
     android:theme="@style/Theme.NoteApp"
+    android:icon="@mipmap/ic_launcher"
+    android:roundIcon="@mipmap/ic_launcher_round"
   >
     <activity
       android:name=".MainActivity"
